2006-04-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlanguages.c: Remove needless include.

2006-04-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmchooser.glade, gui/gdmsetup.glade, gui/gdmsetup.c:
	  Remove gnome glade, since it is not used anymore.  Fixes
	  bug #424696.  Patch by Kristof Vansant <de_lupus@pandora.be>.

2006-04-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlanguages.c: Fix strcpy so source and destination do not
	  overlap.  Fixes bug #424299.  Patch by Ray Strode
	  <rstrode@redhat.com>.

2006-04-02  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h, daemon/slave.c, daemon/misc.c, gui/gdmlogin.c,
	  gui/gdmlanguages.[ch], gui/greeter/Makefile.am, 
	  gui/greeter/greeter_item_customlist.[ch], 
	  gui/greeter/greeter_parser.c:  Now support the ability to
	  change the language on the fly.  Enhancement request #108820.
	  Patch by Takao Fujiwara <Takao.Fujiwara@sun.com>.
	* gui/greeter/greeter_action_language.[ch]: Deleted - code now
	  merged into gui/gdmlanguages.[ch].
	* AUTHORS: Updated.

2007-03-27  William Jon McCann  <mccann@jhu.edu>

	* acinclude.m4:
	* configure.ac: Make sure that we expand the LOCALSTATEDIR
	before using it to find the PID file location.
	For #162849.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter_greeter_item_ulist.c: In greeter_generate_userlist
	  pass in the value for info rather than getting the value again.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter_item.c, gui/greeter/greeter.c
	  gui/greeter_greeter_item_ulist.c, gui/greeter/greeter_system.c:
	  Fix gdmlogin and gdmgreeter so the "Configure GDM" menu choice is
	  not available when accessibility is turned on since running it
	  causes the system to hang.  Also fix gdmgreeter so the Face
	  Browser is not displayed when Browser=false.

2006-03-27  Brian Cameron  <brian.cameron@sun.com>

        * daemon/verify-pam.c: Fix some Solaris specific code to call the new