@@ -1,5 +1,10 @@
 2006-04-02  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmsetup.c: Only show tar and compressed tar files in
+	  file chooser for selecting gdmgreeter themes to install.
+
+2006-04-02  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmlanguages.c: Remove needless include.
 
 2006-04-02  Brian Cameron  <brian.cameron@sun.com>
